Support App diagnostics endpoint features (#76)
* Implement `isInngestEventKeySet` helper function

* Implement `hasSigningKey` helper function

I also added junit-pioneer as a test dependency to be able to
set environment variables in certain tests.

I followed this guide for now but we can look into mocking the
environment ourselves later on:

https://www.baeldung.com/java-unit-testing-environment-variables#setting-environment-variables-with-junit-pioneer

* Add the Introspection classes

I also left a few TODOs for unsupported fields:
- capabilities
- signing key fallback

The `extra` field was also left out, the spec says it's optional and I
think only the JS SDK uses it:
https://github.com/inngest/inngest/blob/main/docs/SDK_SPEC.md#45-introspection-requests

* Repurpose `introspect` to return the correct introspection payload

* Adapt both adapters according to the new `introspect` signature

* Add tests for cloud mode introspection

It's a pain to mock the environment variables in the tests. I introduced
a different `system-stubs-jupiter` library to help with that because
`org.junitpioneer.jupiter` did not work as expected in a Spring Boot
environment.

Ideally I think we should have a mockable custom `Environment` interface
that we use throughout the application, instead of reaching for
`System.getenv()` directly.

The method for mocking that worked is described in this guide:
https://www.baeldung.com/java-system-stubs#environment-and-property-overrides-for-junit-5-spring-tests

* Use the same signing key that was used by other tests

* Change order of introspection fields to alphabetical order

* Address PR feedback